8232684: Make switch expressions final
Reviewed-by: alanb, mcimadamore, kvn